--- a/css/style.css
+++ b/css/style.css
@@ -2,33 +2,16 @@ body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
-.search-field {
-  border: none;
-  border-radius: 50px;
-  padding: 5px;
-  outline: none;
-}
-.search-field:hover {
-  outline: none;
-  border: none;
-}
 .search-box {
-  border: 1px solid rgb(3, 118, 211);
   width: 281px;
-  border-radius: 5px;
   margin: auto;
   margin-top: 50px;
   border-right: none;
 }
-.search-button {
-  padding: 10px 50px;
-  border-radius: 25px;
-  margin-left: 21px;
-}
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  /* border: 1px solid black; */
+  grid-gap: 1%;
   text-align: center;
   width: 100%;
   margin: auto;
@@ -36,13 +19,17 @@ body {
   justify-content: center;
 }
 .single-product {
+  margin-top: 15px;
+  height: 490px;
   padding: 10px;
+  border-radius: 10px;
+  border: 1px solid rgba(100, 98, 98, 0.233);
   transition: 0.6s;
 }
 .single-product:hover {
+  background-color: whitesmoke;
   box-shadow: 4px 4px 7px gray;
   border-radius: 10px;
-  border: 1px solid cyan;
 }
 .product-image {
   width: 150px;
@@ -50,9 +37,8 @@ body {
 }
 .cart {
   width: 350px;
-  /* border: 1px solid green; */
   padding: 10px;
-  box-shadow: 10px 10px 20px gray;
+  box-shadow: 5px 5px 10px gray;
   border-radius: 5px;
   margin-right: 30px;
   position: fixed;
